fix: layout break

--- a/symcomp/src/app/styles/globals.css
+++ b/symcomp/src/app/styles/globals.css
@@ -83,7 +83,7 @@
 
   .animate-marquee {
     display: flex;
-    animation: marquee 100s linear infinite;
+    animation: marquee 1800s linear infinite;
   }
 }
 
